# syncies-allocator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.c
alloc_tester/: CMakeLists.txt  main.c
include/: alloc_lib.h  defs.h  helper_functions.h  internal_alloc.h  structs.h  sync-alloc.h
src/: CMakeLists.txt  alloc_lib.c  internal_alloc.c  main.c
sync_alloc/: CMakeLists.txt  alloc_lib.c  internal_alloc.c  sync_alloc.c
sync_alloc/builtin/: CMakeLists.txt  syn_memops.c
sync_alloc/builtin/include/: syn_memops.h
sync_alloc/include/: alloc_init.h  alloc_lib.h  debug.h  defs.h  handle.h  helper_functions.h  internal_alloc.h  structs.h  sync_alloc.h  types.h
sync_alloc/src/: CMakeLists.txt  alloc_init.c  alloc_lib.c  alloc_utils.c  deadzone.c  debug.c  free_node.c  handle.c  helper_functions.c  huge_page.c  internal_alloc.c  slab.c  sync_alloc.c
sync_alloc/src/builtin/: CMakeLists.txt  syn_memops.c
sync_alloc/src/builtin/include/: syn_memops.h
sync_alloc/src/include/: alloc_init.h  alloc_utils.h  deadzone.h  debug.h  defs.h  free_node.h  globals.h  handle.h  helper_functions.h  huge_page.h  internal_alloc.h  slab.h  structs.h  types.h
